--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.10.1",
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -25,9 +25,14 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@websanova/vue-auth": "^2.21.14-beta",
         "admin-lte": "^2.4.17",
         "owl.carousel": "^2.3.4",
         "slick-carousel": "^1.8.1",
-        "vue-router": "^3.1.2"
+        "vform": "^1.0.1",
+        "vue-axios": "^2.1.4",
+        "vue-router": "^3.1.2",
+        "vuex": "^3.1.1",
+        "vuex-persistedstate": "^2.5.4"
     }
 }
