--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "admin-lte": "^2.4.17",
         "owl.carousel": "^2.3.4",
         "slick-carousel": "^1.8.1",
+        "sweetalert2": "^8.17.1",
         "vform": "^1.0.1",
         "vue-axios": "^2.1.4",
         "vue-router": "^3.1.2",
