--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "sweetalert2": "^8.17.1",
         "vform": "^1.0.1",
         "vue-axios": "^2.1.4",
+        "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.2",
         "vuex": "^3.1.1",
         "vuex-persistedstate": "^2.5.4"
