--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@websanova/vue-auth": "^2.21.14-beta",
         "admin-lte": "^2.4.17",
         "froala-editor": "^3.0.5",
+        "laravel-vue-pagination": "^2.3.1",
         "owl.carousel": "^2.3.4",
         "quill": "^1.3.6",
         "slick-carousel": "^1.8.1",
