--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "vue-axios": "^2.1.4",
         "vue-bus": "^1.2.1",
         "vue-progressbar": "^0.7.5",
+        "vue-rate": "^2.2.0",
         "vue-router": "^3.1.2",
         "vue2-editor": "^2.10.2",
         "vuex": "^3.1.1",
