--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
+        "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@chenfengyuan/vue-number-input": "^1.2.0",
         "@websanova/vue-auth": "^2.21.14-beta",
         "admin-lte": "^2.4.17",
         "froala-editor": "^3.0.5",
