--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.10.1",
         "axios": "^0.18.1",
-        "bootstrap": "^4.1.0",
+        "bootstrap": "^4.4.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
@@ -21,13 +21,14 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.6.10",
+        "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@chenfengyuan/vue-number-input": "^1.2.0",
         "@websanova/vue-auth": "^2.21.14-beta",
         "admin-lte": "^2.4.17",
+        "bootstrap-vue": "^2.2.2",
         "debounce": "^1.2.0",
         "froala-editor": "^3.0.5",
         "laravel-vue-pagination": "^2.3.1",
