--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.4",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nesbot/carbon": "^2.29.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
